appveyor.yml another correction 3

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,11 +13,11 @@ install:
 
 # Post-install test scripts.
 test_script:
-  # Output useful info for debuggin.
+  # Output useful info for debugging.
   - node --version
   - npm --version
   # run tests
   - npm test
 
-  # don't actually build.
+  # Don't actually build.
   build: off
